refactor: updated pages calculation
